--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-SQLAlchemy==2.0.39
-Flask==3.1.0
 blinker==1.9.0
 click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-Werkzeug==3.1.3
-typing_extensions==4.12.2
-greenlet==3.1.1
-colorama==0.4.6
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+SQLAlchemy==2.0.39
+typing_extensions==4.12.2
+Werkzeug==3.1.3
