--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-DATABASE_URI=postgresql://root:root@localhost:5432/organigrama_db
+DATABASE_URI=postgresql://postgres:root@localhost:5432/organigrama_db
 DEBUG=True
 SECRET_KEY=1234
+
+API_DOMAIN=127.0.0.1
+API_PORT=5000
