--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SECRET_KEY=1234
 
 API_DOMAIN=127.0.0.1
 API_PORT=5000
+
+JWT_SECRET_KEY="No one can win every battle, but no man should fall without a struggle"
