--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.2",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elkjs": "^0.10.0",
