Correcion de errores de funcionamiento de rutas del usuario

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SECRET_KEY=1234
 API_DOMAIN=127.0.0.1
 API_PORT=5000
 
-JWT_SECRET_KEY="No one can win every battle, but no man should fall without a struggle"
+JWT_SECRET_KEY=test1234  # Asegúrate de que esta clave coincida con la configuración en tu aplicación
